refactor: moved Callback in utils