@@ -27,7 +27,6 @@ import java.util.Set;
 import javax.inject.Inject;
 
 import dagger.hilt.android.lifecycle.HiltViewModel;
-import it.unimib.yourwardrobe.core.functional.Callback;
 import it.unimib.yourwardrobe.core.functional.Result;
 import it.unimib.yourwardrobe.domain.model.Garment;
 import it.unimib.yourwardrobe.domain.model.Outfit;
@@ -37,6 +36,7 @@ import it.unimib.yourwardrobe.domain.repository.AuthRepository;
 import it.unimib.yourwardrobe.domain.repository.GarmentRepository;
 import it.unimib.yourwardrobe.domain.repository.OutfitRepository;
 import it.unimib.yourwardrobe.domain.repository.WeatherRepository;
+import it.unimib.yourwardrobe.utils.Callback;
 import it.unimib.yourwardrobe.utils.WeatherUtil;
 
 @HiltViewModel
@@ -78,15 +78,13 @@ public class HomeViewModel extends ViewModel {
     // Save outfit
     private final MutableLiveData<Result<Boolean>> _saveOutfitResult = new MutableLiveData<>();
     public final LiveData<Result<Boolean>> saveOutfitResult = _saveOutfitResult;
-
-    // Cache
-    private WeatherInfo cachedWeatherInfo;
-
     // Compatibility maps
     private final Map<String, Set<String>> colorHarmony = new HashMap<>();
     private final Map<String, Set<String>> styleCompatibility = new HashMap<>();
     private final Map<String, Set<String>> seasonCompatibility = new HashMap<>();
     private final Map<String, List<String>> occasionToStyles = new HashMap<>();
+    // Cache
+    private WeatherInfo cachedWeatherInfo;
 
     @Inject
     public HomeViewModel(WeatherRepository weatherRepository,
@@ -112,40 +110,40 @@ public class HomeViewModel extends ViewModel {
     // -------------------------------------------------------------------------
 
     private void initializeColorHarmony() {
-        colorHarmony.put("Nero",    new HashSet<>(Arrays.asList("Bianco","Grigio","Rosso","Blu","Beige","Nero")));
-        colorHarmony.put("Bianco",  new HashSet<>(Arrays.asList("Nero","Blu","Grigio","Rosso","Verde","Beige","Bianco")));
-        colorHarmony.put("Grigio",  new HashSet<>(Arrays.asList("Nero","Bianco","Blu","Rosso","Rosa","Grigio")));
-        colorHarmony.put("Blu",     new HashSet<>(Arrays.asList("Bianco","Grigio","Beige","Nero","Marrone","Blu")));
-        colorHarmony.put("Rosso",   new HashSet<>(Arrays.asList("Nero","Bianco","Grigio","Blu scuro","Rosso")));
-        colorHarmony.put("Verde",   new HashSet<>(Arrays.asList("Bianco","Beige","Marrone","Nero","Verde")));
-        colorHarmony.put("Beige",   new HashSet<>(Arrays.asList("Bianco","Marrone","Blu","Verde","Nero","Beige")));
-        colorHarmony.put("Marrone", new HashSet<>(Arrays.asList("Beige","Verde","Bianco","Blu","Marrone")));
-        colorHarmony.put("Rosa",    new HashSet<>(Arrays.asList("Grigio","Bianco","Nero","Blu","Rosa")));
+        colorHarmony.put("Nero", new HashSet<>(Arrays.asList("Bianco", "Grigio", "Rosso", "Blu", "Beige", "Nero")));
+        colorHarmony.put("Bianco", new HashSet<>(Arrays.asList("Nero", "Blu", "Grigio", "Rosso", "Verde", "Beige", "Bianco")));
+        colorHarmony.put("Grigio", new HashSet<>(Arrays.asList("Nero", "Bianco", "Blu", "Rosso", "Rosa", "Grigio")));
+        colorHarmony.put("Blu", new HashSet<>(Arrays.asList("Bianco", "Grigio", "Beige", "Nero", "Marrone", "Blu")));
+        colorHarmony.put("Rosso", new HashSet<>(Arrays.asList("Nero", "Bianco", "Grigio", "Blu scuro", "Rosso")));
+        colorHarmony.put("Verde", new HashSet<>(Arrays.asList("Bianco", "Beige", "Marrone", "Nero", "Verde")));
+        colorHarmony.put("Beige", new HashSet<>(Arrays.asList("Bianco", "Marrone", "Blu", "Verde", "Nero", "Beige")));
+        colorHarmony.put("Marrone", new HashSet<>(Arrays.asList("Beige", "Verde", "Bianco", "Blu", "Marrone")));
+        colorHarmony.put("Rosa", new HashSet<>(Arrays.asList("Grigio", "Bianco", "Nero", "Blu", "Rosa")));
     }
 
     private void initializeStyleCompatibility() {
-        styleCompatibility.put("Casual",     new HashSet<>(Arrays.asList("Casual","Sportivo","Streetwear")));
-        styleCompatibility.put("Elegante",   new HashSet<>(Arrays.asList("Elegante","Formale","Business")));
-        styleCompatibility.put("Sportivo",   new HashSet<>(Arrays.asList("Sportivo","Casual","Streetwear")));
-        styleCompatibility.put("Formale",    new HashSet<>(Arrays.asList("Formale","Elegante","Business")));
-        styleCompatibility.put("Streetwear", new HashSet<>(Arrays.asList("Streetwear","Casual","Sportivo")));
-        styleCompatibility.put("Business",   new HashSet<>(Arrays.asList("Business","Formale","Elegante")));
-        styleCompatibility.put("Boho",       new HashSet<>(Arrays.asList("Boho","Casual")));
-        styleCompatibility.put("Vintage",    new HashSet<>(Arrays.asList("Vintage","Casual","Elegante")));
+        styleCompatibility.put("Casual", new HashSet<>(Arrays.asList("Casual", "Sportivo", "Streetwear")));
+        styleCompatibility.put("Elegante", new HashSet<>(Arrays.asList("Elegante", "Formale", "Business")));
+        styleCompatibility.put("Sportivo", new HashSet<>(Arrays.asList("Sportivo", "Casual", "Streetwear")));
+        styleCompatibility.put("Formale", new HashSet<>(Arrays.asList("Formale", "Elegante", "Business")));
+        styleCompatibility.put("Streetwear", new HashSet<>(Arrays.asList("Streetwear", "Casual", "Sportivo")));
+        styleCompatibility.put("Business", new HashSet<>(Arrays.asList("Business", "Formale", "Elegante")));
+        styleCompatibility.put("Boho", new HashSet<>(Arrays.asList("Boho", "Casual")));
+        styleCompatibility.put("Vintage", new HashSet<>(Arrays.asList("Vintage", "Casual", "Elegante")));
     }
 
     private void initializeSeasonCompatibility() {
-        seasonCompatibility.put("Primavera", new HashSet<>(Arrays.asList("Primavera","Primavera - Estate","Primavera - Autunno","Tutte le stagioni")));
-        seasonCompatibility.put("Estate",    new HashSet<>(Arrays.asList("Estate","Primavera - Estate","Tutte le stagioni")));
-        seasonCompatibility.put("Autunno",   new HashSet<>(Arrays.asList("Autunno","Inverno - Autunno","Primavera - Autunno","Tutte le stagioni")));
-        seasonCompatibility.put("Inverno",   new HashSet<>(Arrays.asList("Inverno","Inverno - Autunno","Tutte le stagioni")));
+        seasonCompatibility.put("Primavera", new HashSet<>(Arrays.asList("Primavera", "Primavera - Estate", "Primavera - Autunno", "Tutte le stagioni")));
+        seasonCompatibility.put("Estate", new HashSet<>(Arrays.asList("Estate", "Primavera - Estate", "Tutte le stagioni")));
+        seasonCompatibility.put("Autunno", new HashSet<>(Arrays.asList("Autunno", "Inverno - Autunno", "Primavera - Autunno", "Tutte le stagioni")));
+        seasonCompatibility.put("Inverno", new HashSet<>(Arrays.asList("Inverno", "Inverno - Autunno", "Tutte le stagioni")));
     }
 
     private void initializeOccasionToStyles() {
-        occasionToStyles.put("Casual",   Arrays.asList("Casual","Streetwear","Boho","Vintage"));
-        occasionToStyles.put("Business", Arrays.asList("Business","Formale","Elegante"));
-        occasionToStyles.put("Elegant",  Arrays.asList("Elegante","Formale"));
-        occasionToStyles.put("Sport",    Arrays.asList("Sportivo"));
+        occasionToStyles.put("Casual", Arrays.asList("Casual", "Streetwear", "Boho", "Vintage"));
+        occasionToStyles.put("Business", Arrays.asList("Business", "Formale", "Elegante"));
+        occasionToStyles.put("Elegant", Arrays.asList("Elegante", "Formale"));
+        occasionToStyles.put("Sport", List.of("Sportivo"));
     }
 
     // -------------------------------------------------------------------------
@@ -346,9 +344,9 @@ public class HomeViewModel extends ViewModel {
 
         if (pool.size() < 3) pool = filterBySeason(allGarments, filterSeason);
 
-        List<Garment> tops        = filterByCategory(pool, "Parte superiore", filterSeason);
-        List<Garment> bottoms     = filterByCategory(pool, "Parte inferiore", filterSeason);
-        List<Garment> shoes       = isWarm
+        List<Garment> tops = filterByCategory(pool, "Parte superiore", filterSeason);
+        List<Garment> bottoms = filterByCategory(pool, "Parte inferiore", filterSeason);
+        List<Garment> shoes = isWarm
                 ? filterByCategory(pool, "Calzature", filterSeason)
                 : filterByCategoryNoSeason(allGarments, "Calzature");
         List<Garment> accessories = isWarm
@@ -357,7 +355,7 @@ public class HomeViewModel extends ViewModel {
 
         if (tops.isEmpty() || bottoms.isEmpty()) return new ArrayList<>();
 
-        List<List<Garment>> allOutfits   = generateAllCombinations(tops, bottoms, shoes, accessories);
+        List<List<Garment>> allOutfits = generateAllCombinations(tops, bottoms, shoes, accessories);
         List<List<Garment>> validOutfits = filterByConstraints(allOutfits);
 
         if (validOutfits.isEmpty()) return new ArrayList<>();
@@ -435,9 +433,15 @@ public class HomeViewModel extends ViewModel {
         List<Garment> result = new ArrayList<>();
         for (Garment g : garments) {
             if (!garmentMatchesSeason(g, season)) continue;
-            if (g.getStyle() == null || g.getStyle().isEmpty()) { result.add(g); continue; }
+            if (g.getStyle() == null || g.getStyle().isEmpty()) {
+                result.add(g);
+                continue;
+            }
             for (String s : g.getStyle()) {
-                if (allowedStyles.contains(s)) { result.add(g); break; }
+                if (allowedStyles.contains(s)) {
+                    result.add(g);
+                    break;
+                }
             }
         }
         return result;
@@ -481,7 +485,9 @@ public class HomeViewModel extends ViewModel {
 
     private boolean isColorHarmonious(List<Garment> outfit) {
         List<String> colors = new ArrayList<>();
-        for (Garment g : outfit) { if (g.getColor() != null) colors.addAll(g.getColor()); }
+        for (Garment g : outfit) {
+            if (g.getColor() != null) colors.addAll(g.getColor());
+        }
         if (colors.isEmpty()) return true;
         for (int i = 0; i < colors.size(); i++) {
             for (int j = i + 1; j < colors.size(); j++) {
@@ -496,7 +502,9 @@ public class HomeViewModel extends ViewModel {
 
     private boolean isStyleCompatible(List<Garment> outfit) {
         List<String> styles = new ArrayList<>();
-        for (Garment g : outfit) { if (g.getStyle() != null) styles.addAll(g.getStyle()); }
+        for (Garment g : outfit) {
+            if (g.getStyle() != null) styles.addAll(g.getStyle());
+        }
         if (styles.isEmpty()) return true;
         for (int i = 0; i < styles.size(); i++) {
             for (int j = i + 1; j < styles.size(); j++) {
@@ -535,7 +543,8 @@ public class HomeViewModel extends ViewModel {
         String json = sharedPreferences.getString(PREF_OUTFIT_KEY, null);
         if (json == null) return null;
         try {
-            Type t = new TypeToken<List<Garment>>() {}.getType();
+            Type t = new TypeToken<List<Garment>>() {
+            }.getType();
             return gson.fromJson(json, t);
         } catch (Exception e) {
             Log.e(TAG, "Errore caricamento outfit salvato", e);
